--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyBBKGcbtirpsTLgS4GZhxN13THbjx_6OOg",
-  authDomain: "mr-robot-27b47.firebaseapp.com",
-  databaseURL: "https://mr-robot-27b47-default-rtdb.firebaseio.com",
-  projectId: "mr-robot-27b47",
-  storageBucket: "mr-robot-27b47.appspot.com",
+  apiKey: "AIzaSyBcMXQPcWDmKMn06RoNYqYDXqBYVbKbJxs",
+  authDomain: "mr-robot-3629b-default-rtdb.firebaseio.com",
+  databaseURL: "https://mr-robot-3629b-default-rtdb.firebaseio.com",
+  projectId: "mr-robot-3629b",
+  storageBucket: "mr-robot-3629b.appspot.com",
   messagingSenderId: "772470921733",
-  appId: "1:772470921733:web:0bd05a25144605923d9a6c",
+  appId: "1:890253968182:android:e6ae7c3eb2aa46a9f86997",
   measurementId: "G-KHPRXT7LQ5"
 };
  
