--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyBcMXQPcWDmKMn06RoNYqYDXqBYVbKbJxs",
-  authDomain: "mr-robot-3629b-default-rtdb.firebaseio.com",
-  databaseURL: "https://mr-robot-3629b-default-rtdb.firebaseio.com",
-  projectId: "mr-robot-3629b",
-  storageBucket: "mr-robot-3629b.appspot.com",
+  apiKey: "AIzaSyCtf9LGPsi_xC_sGkcklBHPZvPCgUzzHeo",
+  authDomain: "mr-robot-9a5d2-default-rtdb.firebaseio.com",
+  databaseURL: "https://mr-robot-9a5d2-default-rtdb.firebaseio.com",
+  projectId: "mr-robot-9a5d2",
+  storageBucket: "mr-robot-9a5d2.appspot.com",
   messagingSenderId: "772470921733",
-  appId: "1:890253968182:android:e6ae7c3eb2aa46a9f86997",
+  appId: "1:949855262592:android:f3242f5dced341a0ad5365",
   measurementId: "G-KHPRXT7LQ5"
 };
  
